add spacing to cards in latest.html and gallery.html, gallery hover fix on small devices, add show scroll icon in index.html on small devices

--- a/contact.html
+++ b/contact.html
@@ -123,10 +123,11 @@
                     <label for="message"><i class="fas fa-comment-dots"></i> Message</label>
                     <br>
                     <textarea class="form-control" id="message" name="message" value="message" cols="50" rows="10"
-                        placeholder="Please provide any questions or details related to the shoot. eg: The event, Locations, Additional props/equipment." required></textarea>
+                        placeholder="Please provide any questions or details related to the shoot. eg: The event, Locations, Additional props/equipment."
+                        required></textarea>
                     <br>
                     <div class="invalid-feedback">
-                     Please provide a message.
+                        Please provide a message.
                     </div>
                 </div>
             </div>
