--- a/gallery.html
+++ b/gallery.html
@@ -32,8 +32,8 @@
                         <a class="nav-link" href="latest.html">Latest</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" aria-current="page" href="gallery.html" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle active" aria-current="page" href="gallery.html"
+                            id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Gallery
                         </a>
                         <ul class="dropdown-menu text-center" aria-labelledby="navbarDropdownMenuLink">
@@ -54,128 +54,140 @@
     <div class="gallery-container">
         <h2>Urban</h2>
         <hr>
-    <div class="row">
+        <div class="row">
 
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-1.jpg" alt="Man leaning on wall">
-            </a>
+            <div class="col-sm-12 col-md-4 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-1.jpg"
+                    alt="Man leaning on wall">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-2.jpg"
+                    alt="Man checking phone">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-3.jpg"
+                    alt="Woman with skateboard">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-8 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-4.jpg"
+                    alt="Man and woman with skateboards">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-4 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-5.jpg"
+                    alt="Skateboards and sneakers">
+                </a>
+            </div>
         </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-2.jpg" alt="Man checking phone">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-3.jpg" alt="Woman with skateboard">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-8 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-4.jpg" alt="Man and woman with skateboards">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-5.jpg" alt="Skateboards and sneakers">
-            </a>
-        </div> 
     </div>
-</div>
 
-<div id="studio-gallery"></div>
+    <div id="studio-gallery"></div>
     <div class="gallery-container">
         <h2>Studio</h2>
         <hr>
-    <div class="row">
+        <div class="row">
 
-        <div class="col-sm-12 col-md-4 no-padding">
+            <div class="col-sm-12 col-md-4 no-padding">
                 <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-1.jpg" alt="Man in studio-3">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-2.jpg" alt="Woman posing with hands">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-3.jpg" alt="Man with hand on chin">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-8 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-4.jpg" alt="Boy with plant pot">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-4 no-padding">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-2.jpg"
+                    alt="Woman posing with hands">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-3.jpg"
+                    alt="Man with hand on chin">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-8 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-4.jpg"
+                    alt="Boy with plant pot">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-4 no-padding">
                 <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-5.jpg" alt="Woman Shouting">
-            </a>
-        </div> 
+                </a>
+            </div>
+        </div>
     </div>
-</div>
 
-<div id="event-gallery"></div>
+    <div id="event-gallery"></div>
     <div class="gallery-container">
         <h2>Event</h2>
         <hr>
-    <div class="row">
+        <div class="row">
 
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-1.jpg" alt="Birthday with sparklers">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
+            <div class="col-sm-12 col-md-4 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-1.jpg"
+                    alt="Birthday with sparklers">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4 no-padding">
                 <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-2.jpg" alt="Woman singing">
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-4 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-3.jpg" alt="Live band on stage">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-8 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-4.jpg" alt="silhouette of man with lighting equipment">
-            </a>
-        </div>
-        <div class="col-sm-12 col-md-4 no-padding">
-                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-5.jpg" alt="Man singing whilst people taking pictures with phones">
-            </a>
-        </div> 
-    </div>
-</div>
-
-<footer class="container-fluid">
-    <div id="footer-details" class="row">
-        <div class="col-sm-6 text-center">
-            <h5>Follow my socials:</h5>
-            <ul class="list-inline social-links">
-                <li class="list-inline-item">
-                    <a class="hvr-grow" href="https://en-gb.facebook.com/" target="_blank">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                        <span class="sr-only">Facebook</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="hvr-grow" href="https://www.pinterest.co.uk/" target="_blank">
-                        <i class="fa fa-pinterest" aria-hidden="true"></i>
-                        <span class="sr-only">Pinterest</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="hvr-grow" href="https://www.instagram.com/" target="_blank">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                        <span class="sr-only">Instagram</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="hvr-grow" href="https://www.youtube.com/" target="_blank">
-                        <i class="fa fa-youtube" aria-hidden="true"></i>
-                        <span class="sr-only">Youtube</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="col-sm-6 text-right">
-            <p class="copyright-text inline-block">
-                Copyright 2021 - Photographer
-            </p>
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-3.jpg"
+                    alt="Live band on stage">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-8 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-4.jpg"
+                    alt="silhouette of man with lighting equipment">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-4 no-padding">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-5.jpg"
+                    alt="Man singing whilst people taking pictures with phones">
+                </a>
+            </div>
         </div>
     </div>
 
-</footer>
+    <footer class="container-fluid">
+        <div id="footer-details" class="row">
+            <div class="col-sm-6 text-center">
+                <h5>Follow my socials:</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a class="hvr-grow" href="https://en-gb.facebook.com/" target="_blank">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="hvr-grow" href="https://www.pinterest.co.uk/" target="_blank">
+                            <i class="fa fa-pinterest" aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="hvr-grow" href="https://www.instagram.com/" target="_blank">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="hvr-grow" href="https://www.youtube.com/" target="_blank">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">Youtube</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-6 text-right">
+                <p class="copyright-text inline-block">
+                    Copyright 2021 - Photographer
+                </p>
+            </div>
+        </div>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
