--- a/index.html
+++ b/index.html
@@ -63,16 +63,17 @@
 
                     </p>
                     <a class="btn btn-lg blue-btn hvr-grow" href="contact.html">Book a shoot!</a>
-                    <div class="scroll-icon-container text-center d-none d-md-block">
+                    <div class="scroll-icon-container text-center">
                         <p>Scroll for more info on shoots.</p>
-                        <a class="scroll-icon hvr-sink" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
+                        <a class="scroll-icon hvr-sink" href="#index-scroll"><i
+                                class="fas fa-chevron-circle-down"></i></a>
                     </div>
                 </section>
             </div>
         </div>
     </div>
 
-    <hr id="scroll-point">
+    <hr id="index-scroll">
 
     <div class="card-container">
         <div class="row">
@@ -89,7 +90,8 @@
                                     optio
                                     distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
                                     eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                                <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#urban-gallery">View urban gallery</a>
+                                <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#urban-gallery">View urban
+                                    gallery</a>
                             </div>
                         </div>
                     </div>
@@ -138,7 +140,8 @@
                                     optio
                                     distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
                                     eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                                <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#event-gallery">View event gallery</a>
+                                <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#event-gallery">View event
+                                    gallery</a>
                             </div>
                         </div>
                     </div>
