--- a/latest.html
+++ b/latest.html
@@ -32,8 +32,8 @@
                         <a class="nav-link active" aria-current="page" href="latest.html">Latest</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Gallery
                         </a>
                         <ul class="dropdown-menu text-center" aria-labelledby="navbarDropdownMenuLink">
@@ -85,144 +85,145 @@
     <hr>
 
     <div class="card-container">
-    <div class="row">
-        <div class="col-sm-12 col-md-6 no-padding">
-            <div class="card latest-card latest-card-small">
-                <img src="assets/images/latest/latest-card-1.jpg" class="card-img" alt="Woman with leg raised">
-                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
-                    <div class="card-text-bg">
-                        <h3 class="card-title">Urban shoot with Eve</h3>
-                        <p class="card-text">18/02/2021</p>
-                        <details>
-                            <summary>Equipment Used</summary>
-                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
-                            <p>Nikon 24-70mm f2.8</p>
-                            <p>Nikon 14-24mm f2.8</p>
-                        </details>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 no-padding">
+                <div class="card latest-card latest-card-small">
+                    <img src="assets/images/latest/latest-card-1.jpg" class="card-img" alt="Woman with leg raised">
+                    <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                        <div class="card-text-bg">
+                            <h3 class="card-title">Urban shoot with Eve</h3>
+                            <p class="card-text">18/02/2021</p>
+                            <details>
+                                <summary>Equipment Used</summary>
+                                <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                                <p>Nikon 24-70mm f2.8</p>
+                                <p>Nikon 14-24mm f2.8</p>
+                            </details>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 no-padding">
+                <div class="card latest-card latest-card-small">
+                    <img src="assets/images/latest/latest-card-2.jpg" class="card-img"
+                        alt="Woman stood with birthday balloons">
+                    <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                        <div class="card-text-bg">
+                            <h3 class="card-title">Yasmine's Birthday</h3>
+                            <p class="card-text">03/01/2021</p>
+                            <details>
+                                <summary>Equipment Used</summary>
+                                <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                                <p>Nikon 24-70mm f2.8</p>
+                                <p>Nikon 14-24mm f2.8</p>
+                            </details>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-sm-12 col-md-6 no-padding">
-            <div class="card latest-card latest-card-small">
-                <img src="assets/images/latest/latest-card-2.jpg" class="card-img" alt="Woman stood with birthday balloons">
-                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
-                    <div class="card-text-bg">
-                        <h3 class="card-title">Yasmine's Birthday</h3>
-                        <p class="card-text">03/01/2021</p>
-                        <details>
-                            <summary>Equipment Used</summary>
-                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
-                            <p>Nikon 24-70mm f2.8</p>
-                            <p>Nikon 14-24mm f2.8</p>
-                        </details>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-    
-    <div class="card-container">
-    <div class="row">
-        <div class="col-12 no-padding">
-             <div class="card latest-card latest-card-large">
-                <img src="assets/images/latest/latest-card-3.jpg" class="card-img" alt="Band plating live music">
-                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
-                    <div class="card-text-bg">
-                        <h3 class="card-title">Live event band shoot</h3>
-                        <p class="card-text">17/11/2020</p>
-                        <details>
-                            <summary>Equipment Used</summary>
-                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
-                            <p>Nikon 24-70mm f2.8</p>
-                            <p>Nikon 14-24mm f2.8</p>
-                        </details>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     </div>
 
     <div class="card-container">
-    <div class="row">
-        <div class="col-sm-12 col-md-6 no-padding">
-            <div class="card latest-card latest-card-small">
-                <img src="assets/images/latest/latest-card-4.jpg" class="card-img" alt="Barber shop">
-                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
-                    <div class="card-text-bg">
-                        <h3 class="card-title">Barber Barber Manchester</h3>
-                        <p class="card-text">24/10/2020</p>
-                        <details>
-                            <summary>Equipment Used</summary>
-                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
-                            <p>Nikon 24-70mm f2.8</p>
-                            <p>Nikon 14-24mm f2.8</p>
-                        </details>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-6 no-padding">
-            <div class="card latest-card latest-card-small">
-                <img src="assets/images/latest/latest-card-5.jpg" class="card-img" alt="Man walking in studio">
-                <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
-                    <div class="card-text-bg">
-                        <h3 class="card-title">Studio shoot with Jason</h3>
-                        <p class="card-text">16/10/2020</p>
-                        <details>
-                            <summary>Equipment Used</summary>
-                            <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
-                            <p>Nikon 24-70mm f2.8</p>
-                            <p>Nikon 14-24mm f2.8</p>
-                        </details>
+        <div class="row">
+            <div class="col-12 no-padding">
+                <div class="card latest-card latest-card-large">
+                    <img src="assets/images/latest/latest-card-3.jpg" class="card-img" alt="Band plating live music">
+                    <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                        <div class="card-text-bg">
+                            <h3 class="card-title">Live event band shoot</h3>
+                            <p class="card-text">17/11/2020</p>
+                            <details>
+                                <summary>Equipment Used</summary>
+                                <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                                <p>Nikon 24-70mm f2.8</p>
+                                <p>Nikon 14-24mm f2.8</p>
+                            </details>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<footer class="container-fluid">
-    <div id="footer-details" class="row">
-        <div class="col-sm-6 text-center">
-            <h5>Follow my socials:</h5>
-            <ul class="list-inline social-links">
-                <li class="list-inline-item">
-                    <a class="hvr-grow" href="https://en-gb.facebook.com/" target="_blank">
-                        <i class="fa fa-facebook" aria-hidden="true"></i>
-                        <span class="sr-only">Facebook</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="hvr-grow" href="https://www.pinterest.co.uk/" target="_blank">
-                        <i class="fa fa-pinterest" aria-hidden="true"></i>
-                        <span class="sr-only">Pinterest</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="hvr-grow" href="https://www.instagram.com/" target="_blank">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                        <span class="sr-only">Instagram</span>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="hvr-grow" href="https://www.youtube.com/" target="_blank">
-                        <i class="fa fa-youtube" aria-hidden="true"></i>
-                        <span class="sr-only">Youtube</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="col-sm-6 text-right">
-            <p class="copyright-text inline-block">
-                Copyright 2021 - Photographer
-            </p>
+    <div class="card-container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 no-padding">
+                <div class="card latest-card latest-card-small">
+                    <img src="assets/images/latest/latest-card-4.jpg" class="card-img" alt="Barber shop">
+                    <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                        <div class="card-text-bg">
+                            <h3 class="card-title">Barber Barber Manchester</h3>
+                            <p class="card-text">24/10/2020</p>
+                            <details>
+                                <summary>Equipment Used</summary>
+                                <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                                <p>Nikon 24-70mm f2.8</p>
+                                <p>Nikon 14-24mm f2.8</p>
+                            </details>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6 no-padding">
+                <div class="card latest-card latest-card-small">
+                    <img src="assets/images/latest/latest-card-5.jpg" class="card-img" alt="Man walking in studio">
+                    <div class="card-img-overlay card-body d-flex flex-column justify-content-end">
+                        <div class="card-text-bg">
+                            <h3 class="card-title">Studio shoot with Jason</h3>
+                            <p class="card-text">16/10/2020</p>
+                            <details>
+                                <summary>Equipment Used</summary>
+                                <p><i class="fas fa-camera"></i> Nikon D4S DSLR</p>
+                                <p>Nikon 24-70mm f2.8</p>
+                                <p>Nikon 14-24mm f2.8</p>
+                            </details>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-</footer>
+    <footer class="container-fluid">
+        <div id="footer-details" class="row">
+            <div class="col-sm-6 text-center">
+                <h5>Follow my socials:</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a class="hvr-grow" href="https://en-gb.facebook.com/" target="_blank">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="hvr-grow" href="https://www.pinterest.co.uk/" target="_blank">
+                            <i class="fa fa-pinterest" aria-hidden="true"></i>
+                            <span class="sr-only">Pinterest</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="hvr-grow" href="https://www.instagram.com/" target="_blank">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="hvr-grow" href="https://www.youtube.com/" target="_blank">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">Youtube</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-6 text-right">
+                <p class="copyright-text inline-block">
+                    Copyright 2021 - Photographer
+                </p>
+            </div>
+        </div>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
