update nav brand on all pages, update lorem text in index.hmtl and contact.html, move wire frames to documents folder, add img to about section in contact.hmtl, fix responsive in style.css, add responsive to enquire form.

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Photographer</a>
+            <a class="navbar-brand" href="index.html">Manc Photographer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -56,13 +56,17 @@
         <div class="row">
             <div class="col-md-9 col-sm-12">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores magnam laborum, quia assumenda
-                    quo expedita ex perferendis modi quis sint labore ut voluptates facere eligendi animi voluptatum
-                    doloremque enim amet.
+                    Hi im John Doe.
+                    <br>
+                    <br>
+                    Just so you know a little about me I am a freelance photographer based in manchester. I specialize in many fields such as - Urban street photography, Studio photography and Live event photography. I have been shooting for as long as i can remember but started professionally since 2019.
+                    <br>
+                    <br>
+                    Take a look at my <a href="latest.html">Latest</a> and <a href="gallery.html">Gallery</a> pages to see my work, I hope we can work together in the future!
                 </p>
             </div>
             <div class="col-3 d-none d-md-block">
-                <img src="assets/images/Gallery/urban-1.jpg" alt="Photographer">
+                <img src="assets/images/contact/johndoe.jpg" alt="Photographer">
             </div>
         </div>
     </div>
@@ -76,9 +80,9 @@
         <form class="was-validated" novalidate method="post" action="https://formdump.codeinstitute.net/">
 
             <div class="form-row">
-                <div class="col-9">
+                <div class="col">
                     <label for="name"><i class="fas fa-user"></i> Name</label>
-                    <input class="form-control" type="text" id="name" name="name" required />
+                    <input class="form-control text-input" type="text" id="name" name="name" required />
                     <div class="valid-feedback">
                         Awesome Name!
                     </div>
@@ -86,9 +90,9 @@
             </div>
 
             <div class="form-row">
-                <div class="col-9">
+                <div class="col">
                     <label for="email"><i class="fas fa-envelope"></i> Email</label>
-                    <input class="form-control" id="email" type="email" name="email" required />
+                    <input class="form-control text-input" id="email" type="email" name="email" required />
                     <div class="valid-feedback">
                         Great!
                     </div>
@@ -96,9 +100,9 @@
             </div>
 
             <div class="form-row">
-                <div class="col-9">
+                <div class="col">
                     <label for="tel"><i class="fas fa-phone"></i> Phone</label>
-                    <input class="form-control" id="tel" type="tel" name="tel" required />
+                    <input class="form-control text-input" id="tel" type="tel" name="tel" required />
                     <div class="valid-feedback">
                         Looks Good!
                     </div>
@@ -106,7 +110,7 @@
             </div>
 
             <div class="form-row">
-                <div class="col-6">
+                <div class="col">
                     <label for="shoot"><i class="fas fa-camera"></i> Photoshoot</label>
                     <select class="form-control" id="shoot" name="shoot">
                         <option value="urban">Urban</option>
@@ -119,7 +123,7 @@
             </div>
 
             <div class="form-row">
-                <div class="col-12">
+                <div class="col">
                     <label for="message"><i class="fas fa-comment-dots"></i> Message</label>
                     <br>
                     <textarea class="form-control" id="message" name="message" value="message" cols="50" rows="10"
