--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Photographer</a>
+            <a class="navbar-brand" href="index.html">Manc Photographer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -86,10 +86,9 @@
                         <div class="col-md-5">
                             <div class="card-body">
                                 <h3 class="card-title">Urban Photography</h3>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta
-                                    optio
-                                    distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                    eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                                <p class="card-text">
+                                    Need an urban photo shoot for your brand, promotion photos or maybe just your social media. Send a message through my <a href="contact.html">About & Enquire</a> page and we can find the perfect location for your needs.
+                                </p>
                                 <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#urban-gallery">View urban
                                     gallery</a>
                             </div>
@@ -108,10 +107,9 @@
                         <div class="col-md-5 order-1 order-sm-1 order-md-0">
                             <div class="card-body">
                                 <h3 class="card-title">Studio Photography</h3>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta
-                                    optio
-                                    distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                    eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                                <p class="card-text">
+                                    Studio photo shoots are located in the center of manchester,  we can arrange anything from photo shoots with the family to professional portraits and anything between. Add any details about the photo shoot in my <a href="contact.html">About & Enquire</a> page.
+                                </p>
                                 <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#studio-gallery">View studio
                                     gallery</a>
                             </div>
@@ -136,10 +134,9 @@
                         <div class="col-md-5">
                             <div class="card-body">
                                 <h3 class="card-title">Event Photography</h3>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta
-                                    optio
-                                    distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                    eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                                <p class="card-text">
+                                    Are you an upcoming band or need a special birthday covering? I can facilitate events of any kind ranging from birthdays to live music events. remember to add any venues or dates on my <a href="contact.html">About & Enquire</a> page.
+                                </p>
                                 <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#event-gallery">View event
                                     gallery</a>
                             </div>
